crates/cli/tests/snapshots/migrate_test__from_turborepo__converts_global_tasks.snap
---
source: crates/cli/tests/migrate_test.rs
expression: "fs::read_to_string(sandbox.path().join(\".moon/tasks/node.yml\")).unwrap()"
---
tasks:
  build:
    command: moon node run-script build
    deps:
    - ^:build
    outputs:
    - build/**/*
    platform: node
  lint:
    command: moon node run-script lint
    inputs:
    - $NODE_ENV
    - src/**/*
    options:
      cache: false
    platform: node

