crates/cli/tests/snapshots/migrate_test__from_turborepo__converts_project_tasks-2.snap
---
source: crates/cli/tests/migrate_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"turborepo/library/moon.yml\")).unwrap()"
---
tasks:
  lint:
    command: moon node run-script lint
    inputs:
    - $NODE_ENV
    - src/**/*
    options:
      cache: false
    platform: node

