crates/cli/tests/snapshots/migrate_test__from_turborepo__converts_project_tasks.snap
---
source: crates/cli/tests/migrate_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"turborepo/app/moon.yml\")).unwrap()"
---
tasks:
  build:
    command: moon node run-script build
    deps:
    - ^:build
    outputs:
    - build
    platform: node

